--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,8 @@
 
     {% comment %} THIS IS JUST FOR NOW, we can take out later! {% endcomment %}
     <br><br><br><br><br><br><br><br><br>
-
-<!-- FOOTER -->
-<div class="daddy" style="width: 100%">
+    <!-- FOOTER -->
+<div class="daddy" style="background-color: rgba(0,0,0,0.40)">
   <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2">
@@ -79,6 +78,8 @@
     </div>
   </div>
 </footer>
+
+
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.4.1.min.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
