--- a/templates/dontoverdose/allDrugs.html
+++ b/templates/dontoverdose/allDrugs.html
@@ -48,6 +48,5 @@
     
     </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<div class="wrapper overflow">
-<br><br><br>
-{%endblock%}</div>
+
+{%endblock%}
