--- a/templates/dontoverdose/allPrescribers.html
+++ b/templates/dontoverdose/allPrescribers.html
@@ -77,8 +77,8 @@
         </div>
     
     </section>
-    <br><br>    <br><br><br><br><br><br><br><br> <br>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<div class="wrapper overflow">
-{%endblock%}</div>
+
+{%endblock%}
 
