--- a/templates/dontoverdose/index.html
+++ b/templates/dontoverdose/index.html
@@ -139,11 +139,51 @@
  </div>
 </div>
 </div>
-<div class="container">
-<div class="row">
- <div class="container py-sm-4"> </div>
+<!-- FOOTER -->
+<div class="daddy" style="background-color: rgba(0,0,0,0.40)">
+  <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2">
+          <h2 id="contactbottom">Contact Us</h2>
+          <address>
+            <strong>BYU IS</strong><br>
+            Brigham Young University, Ernest L. Wilkinson Student Center, 1 Campus Dr #1944, Provo, UT 84604, PO BOX 12345<br>
+          <u>Phone : 385-333-439</u>
+          </address>
+          <h4>Our Supporters&nbsp;</h4>
+        </div>
+        <div class="col-lg-4 col-md-6 col-12">
+          <h2 id='testimonials'>Testimonials</h2>
+          <ul class="list-unstyled">
+            <li class="media">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">Heading 1</h5>
+                <p class="mb-0">We should quote tikTokers! hahaha&nbsp;</p>
+              </div>
+            </li>
+            <li class="media my-4">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">Heading 2</h5>
+                <p class="mb-0">And then quote the boring lady&nbsp;&nbsp;</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-12">
+          <h2 id='aboutUs'>About Us</h2>
+          <p>Group I-8 recognized a massive need for the publication of this data. We knew that if we didn't deploy by Friday, Dec 3, then 50 other similar websites with the same data was going to rise from the dust and steal our troph. So we acted fast and promptly. And now, hopefully we win the prize in tex....as ?!?!?!&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+          <p>More important, government officials and public health offices have made known to the rising concern of prescription drug abuse and reached out to us for help in creating the tool for health professionals, government agencies and citizens alike.&nbsp; &nbsp; &nbsp; &nbsp;</p>
+        </div>
+      </div>
+    </div>   
 </div>
-</div>
-
-
+<footer class="text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright © Group I-8. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 {%endblock%}
