--- a/templates/dontoverdose/displayPrescriberAndDrugs.html
+++ b/templates/dontoverdose/displayPrescriberAndDrugs.html
@@ -2,11 +2,6 @@
 {% load static %}
 {% block content %}
 <style>
-    .tablealign{
-        display: grid;
-        grid-template-columns:2fr 1fr;
-        grid-column-gap: -2px;
-    }
 </style>
 
 <br><br><br>
@@ -89,7 +84,7 @@
     </div>
     <div>
     <table>
-        <th style="text-align: center;">Average sold by all prescribers</th>
+        <th style="text-align: center;">Average Sold by All Prescribers</th>
             {% for average in average%}
             <tr>
                 <td style="text-align: center;">
