--- a/templates/dontoverdose/index.html
+++ b/templates/dontoverdose/index.html
@@ -139,7 +139,7 @@
  </div>
 </div>
 </div>
-<!-- FOOTER -->
+{% comment %} <!-- FOOTER -->
 <div class="daddy" style="background-color: rgba(0,0,0,0.40)">
   <div class="container">
       <div class="row">
@@ -185,5 +185,5 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> {% endcomment %}
 {%endblock%}
