--- a/templates/dontoverdose/searchDrug.html
+++ b/templates/dontoverdose/searchDrug.html
@@ -50,6 +50,6 @@
     
     </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<div class="wrapper overflow">
-<br><br><br>
-{%endblock%}</div>
+
+<br>
+{%endblock%}
